Fix build with -DGSEAL_ENABLED

Wanda: don't forget to port me.

https://bugzilla.gnome.org/show_bug.cgi?id=612481

Signed-off-by: Germán Póo-Caamaño <gpoo@gnome.org>