applets/wncklet/window-menu.c
@@ -209,11 +209,15 @@ window_menu_key_press_event (GtkWidget   *widget,
 		 * As that function is private its code is replicated here.
 		 */
 		menu_shell = GTK_MENU_SHELL (selector);
+		/* FIXMEgpoo: We need either accessors or a workaround
+		   to grab the focus */
+#if 0
 		if (!menu_shell->GSEAL(active)) {
 			gtk_grab_add (GTK_WIDGET (menu_shell));
 			menu_shell->GSEAL(have_grab) = TRUE;
 			menu_shell->GSEAL(active) = TRUE;
 		}
+#endif
 		gtk_menu_shell_select_first (menu_shell, FALSE);
 		return TRUE;
 	default:
